--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root{
   --text-color: rgb(255, 255, 255);
-  --bg-url: url(./image/assets/bg-desktop.jpg);
+  --bg-url: url(./image/assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
   --surface-color:rgba(255, 255, 255, 0.1);
   --surface-color-hover: rgba(255, 255, 255, 0.05);
@@ -83,8 +83,8 @@ body * {
   right: 0;
 }
 
-.switch-theme button:checked {
-  background: var(--highlight-color);
+.switch-theme button:hover {
+  cursor: pointer;
 }
 
 .switch-theme span{
